# cg-rust

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  cbindgen.ps1  cbindgen.toml  readme.md
.cargo/: config.toml
autogen/: cg_rust.h
examples/plotters/: ex_polygon.rs
examples/wgpu/polygon/: ex_polygon.rs  polygon_shader.wgsl
src/: c_export.rs  cardinal_direction.rs  common_properties.rs  lib.rs  math.rs  mesh.rs  mesh_components.rs  mesh_normal_calculation.rs  polygon.rs  property_map.rs  traits.rs  triangle_vertex_mesh.rs  util.rs  vector.rs
src/c_export/: c_arr.rs  c_polygon.rs  c_vector.rs
