[package]
name = "cg-rust"
version = "0.1.2"
authors = ["Mario Binder"]
edition = "2024"
license = "MIT"

[lib]
name = "cg_rust"
crate-type = ["dylib"]

[dependencies]
num-traits = "0.2.19" 

[dev-dependencies]
plotters = "0.3.7"


[[example]]
name = "plotter_polygon"
path = "examples/plotters/ex_polygon.rs"